Aufgabe3_MicroserviceArchitektur/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immutable-web
  namespace: immutable-app
spec:
  type: ClusterIP
  selector:
    app: immutable-web
  ports:
    - port: 80
      targetPort: 80
