Aufgabe3_MicroserviceArchitektur/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immutable-web
  namespace: immutable-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: immutable.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immutable-web
                port:
                  number: 80
